[gd_scene load_steps=6 format=2]

[ext_resource path="res://fonts/OpenSans/OpenSans-VariableFont.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/GameOver Menu.gd" type="Script" id=2]
[ext_resource path="res://import/sounds/generic/Game Over.ogg" type="AudioStream" id=3]

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
size = 33
font_data = ExtResource( 1 )

[node name="GameOver Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Name Label" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -180.0
margin_top = -155.0
margin_right = 180.0
margin_bottom = 155.0
custom_fonts/normal_font = SubResource( 2 )
text = "Game Over!"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -225.5
margin_top = -26.0
margin_right = 225.5
margin_bottom = 26.0
alignment = 1

[node name="Back Button" type="Button" parent="HBoxContainer"]
modulate = Color( 1, 1, 0, 1 )
margin_right = 224.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 1 )
text = "Back to menu"

[node name="Restart Button" type="Button" parent="HBoxContainer"]
modulate = Color( 1, 1, 0, 1 )
margin_left = 228.0
margin_right = 451.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 1 )
text = "Restart Game"

[node name="GameOverSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="HBoxContainer/Back Button" to="." method="_on_Back_Button_pressed"]
[connection signal="pressed" from="HBoxContainer/Restart Button" to="." method="_on_Restart_Button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
